work section finished

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 h1 {
-    font-size: 35px;
+    font-size: 40px;
 }
 
 span {
@@ -67,10 +67,14 @@ p {
 
 }
 
+h2 {
+    font-size: 30px;
+}
+
 .work-title {
     font-size: 30px;
     text-align: center;
-    margin-top: 10%;
+    margin: 10% 0 3%;
 }
 
 .my-work {
