--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ p {
 .work-bg {
     background-image: url("images/latest-work-bg.png");
     background-size: cover;
-    height: 450px;
+    height: 425px;
     background-position: center;
 
 }
@@ -74,7 +74,7 @@ h2 {
 .work-title {
     font-size: 30px;
     text-align: center;
-    margin: 10% 0 3%;
+    margin: 7% 0 2%;
 }
 
 .my-work {
@@ -93,4 +93,48 @@ h2 {
 
 .work-right {
     margin-right: 10%;
+}
+
+.footer-bg {
+    background-image: url("images/footer-bg.png");
+    background-size: cover;
+    height: 700px;
+}
+
+.footer-top {
+    text-align: center;
+    margin-top: 10%;
+
+}
+
+.footer-top h2 {
+    margin-bottom: 5%;
+}
+
+.footer-top p {
+    text-align: center;
+}
+
+.footer-top h4 {
+    margin-top: 3%;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.send-email {
+    margin: 5% 0 10%;
+    background-image: -webkit-gradient(linear, right top, left top, from(#ff3366), to(#ff6699));
+    background-image: linear-gradient(-90deg, #ff3366, #ff6699);
+    display: inline-block;
+    padding: 20px 100px 35px;
+    color: #ffffff;
+    border-radius: 5px;
+}
+.send-email p{
+    color: #ffffff;
+}
+
+.footer-bottom p {
+    text-align: center;
+    margin-bottom: 3%;
 }
