--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ p {
     color: #ffffff;
 }
 
+.link-btn:hover {
+    font-weight: bold;
+}
+
 .peter-pic {
     width: 100%;
 }
@@ -122,7 +126,7 @@ h2 {
 }
 
 .send-email {
-    margin: 5% 0 10%;
+    margin: 4% 0 8%;
     background-image: -webkit-gradient(linear, right top, left top, from(#ff3366), to(#ff6699));
     background-image: linear-gradient(-90deg, #ff3366, #ff6699);
     display: inline-block;
@@ -133,6 +137,13 @@ h2 {
 
 .send-email p {
     color: #ffffff;
+}
+
+.social-media {
+    text-align: center;
+    font-size: 35px;
+    color: #ff3366;
+    padding-bottom: 10px;
 }
 
 .footer-bottom p {
